# VisionForge

./: .gitattributes  .gitignore  Cargo.toml  DYNAMIC_WORKFLOW_IMPLEMENTATION_REVIEW.md  HARDWARE_REQUIREMENTS.md  HIGH_PERFORMANCE_BACKEND_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  MACOS_M1_VALIDATION.md  README.md  VISIONFORGE_PRODUCT_PLAN.md  VISIONFORGE_REQUIREMENTS_SPEC.md  package-lock.json  package.json  pytest.ini
apps/desktop/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  bridge.ts  domain.test.ts  domain.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: engine.rs  lib.rs  main.rs
crates/visionforge-core/: Cargo.toml
crates/visionforge-core/src/: dataset.rs  lib.rs  model.rs  project.rs  routing.rs  task.rs
engine/: pyproject.toml  sidecar.py
engine/resources/: PRETRAINED_MODEL_NOTICE.md
engine/resources/licenses/: pytorch-LICENSE.txt
engine/src/visionforge_engine/: __init__.py  cli.py  compositor.py  detector.py  hardware.py  models.py  package.py  quality.py  torch_detector.py
engine/tests/: test_compositor.py  test_detector.py  test_hardware.py  test_package.py  test_quality.py  test_torch_detector.py
scripts/: build-engine-sidecar.mjs  build-engine-sidecar.ps1  prepare-desktop-bundle.mjs  prepare-desktop-bundle.ps1
