[project]
name = "visionforge-engine"
version = "0.1.0"
description = "Offline image processing and AI worker for VisionForge"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.0,<3",
  "pillow>=11,<13",
  "torch==2.11.*",
  "torchvision==0.26.*",
]

[dependency-groups]
dev = [
  "pyinstaller==6.21.0",
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[project.scripts]
visionforge-engine = "visionforge_engine.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visionforge_engine"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
